--- a/sass/theme.css
+++ b/sass/theme.css
@@ -540,7 +540,6 @@ header .navbar {
 .dropdown__switch:checked + .dropdown__options-filter .dropdown__filter {
   display: block;
   opacity: 1;
-  transform: height;
   top: 100%;
   right: 0;
   left: 0;
@@ -1009,7 +1008,7 @@ header .navbar {
   width: 100%;
   height: 495px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   position: relative;
   top: 0;
   left: 0;
@@ -1101,7 +1100,6 @@ header .navbar {
 @media (max-width: 1024px) {
   #photo-block {
     width: 100%;
-    position: none;
     display: flex;
     justify-content: center;
   }
@@ -1161,7 +1159,7 @@ header .navbar {
 }
 @media (max-width: 375px) {
   #photo-block #photo-block-survol #photo_icon_fullscreen img {
-    width: 27x;
+    width: 27px;
     height: 27px;
   }
   #photo-block #photo-block-survol #photo_icon_fullscreen #photo_icon_eye .img_icon_eye {
